k8s/manifest/service.yml
apiVersion: v1
kind: Service
metadata:
  name: k8s-demo-svc
  namespace: default
  labels:
    app: k8s-demo
spec:
  selector:
    app: k8s-demo
  ports:
    - port: 80
      protocol: TCP
      targetPort: 5000
