k8s/manifest/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-demo-ingress
  namespace: default
spec:
  rules:
    - host: k8s-demo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: k8s-demo-svc
                port:
                  number: 80
